apply code policy in CSW module